Fix text alignment

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ header {
 main {
   background-color: gray;
   margin: 5px;
-  padding: 20px 100px;
+  padding: 20px 90px;
   border-top: solid 5px lightgray;
 }
 
